# psyki-python

./: .coveragerc  .gitattributes  .gitignore  CONTRIBUTORS  Dockerfile  Gemfile  LICENSE  MANIFEST.in  README.md  _config.yml  demo-composer-poker.ipynb  demo-iris.ipynb  demo-lambda-poker.ipynb  demo.ipynb  dummy.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: black.yml  check.yml  deploy.yml  dockerify.yml  pages-deploy.yml  pages-deploy.yml.hook  todos.yml
_data/: authors.yml
_includes/: refactor-content.html
_layouts/: home.html
_posts/: 2023-09-12-introduction.md  2023-09-13-contributors.md  2023-09-13-demo.md  2023-09-13-kbann.md  2023-09-13-kill.md  2023-09-13-kins.md  2023-09-13-metrics.md
demo/: cilc.ipynb
docs/: Gemfile  _config.yml  contributors.markdown  index.markdown
docs/_posts/: 2023-09-11-welcome-to-jekyll.markdown
local/: dummy.py  lyrics_recursion.py
psyki/: __init__.py  _logging.py
psyki/fairness/: __init__.py
psyki/fairness/fauci/: __init__.py  tf_metric.py
psyki/fol/: __init__.py
psyki/fuzzifiers/: __init__.py
psyki/logic/: __init__.py
psyki/qos/: __init__.py  base.py  data.py  energy.py  latency.py  memory.py  metric.py  qos.py  utils.py
psyki/resources/: Datalog.g4  __init__.py
psyki/ski/: __init__.py  injectors.py
psyki/utils/: __init__.py  __main__.py
psyki/wiki/: __main__.py
resources/: Datalog.g4  FOL.g4  Prolog.g4
test/: __init__.py
test/psyki/: __init__.py
test/utils/: __init__.py
utils/: __init__.py  __main__.py
wiki/: __main__.py
(+104 files in other folders)
