[tool.poetry]
name = "psyki"
version = "0.4.3"
description = "PSyKI: a (Python) platform for symbolic knowledge injection"
authors = ["Matteo Magnini <matteo.magnini@unibo.it>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
tensorflow = "2.14.1"
scikit-learn = "1.0.2"
codecarbon = "2.2.4"
2ppy = "^0.4.1"
pandas = "1.4.2"
tensorflow-macos = { version = "2.14.1", markers = "sys_platform == 'darwin'" }
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
